app/style.css
:root {
  --clr-neutral-100: #fff;
  --clr-neutral-200: #ecf0f1;
  --clr-neutral-300: #95afc0;
  --clr-dark-100: #708090;
  --clr-dark-200: #2c3e50;
  --clr-dark-300: #2d3436;

  --fw-400: 400;
  --fw-700: 700;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
  scrollbar-width: thin;
  scrollbar-color: rgba(112, 128, 144, 0.5) transparent;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

body {
  font-family: 'Quicksand', sans-serif;
  font-weight: var(--fw-400);
  color: var(--clr-neutral-100);
  line-height: 1.3;
  background-image: linear-gradient(
    to right top,
    rgb(63, 118, 207) 0%,
    rgb(169, 183, 247) 100%
  );
  min-height: 100vh;
}

.flow-content > * + * {
  margin-top: 2rem;
}

.flow-content--large > * + * {
  margin-top: 2.5rem;
}

.l-space {
  margin-top: 1.5rem;
}

.xl-space {
  margin-top: 3rem;
}

.nav__brand,
.btn {
  font-family: 'Quicksand', sans-serif;
  font-weight: var(--fw-700);
  font-size: 2rem;
}

.btn {
  background-color: var(--clr-neutral-100);
  color: var(--clr-dark-200);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 10px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  padding: 0.4em 0.8em;
  position: relative;
  z-index: 1;
  transition: transform 0.2s ease;
}

.btn:hover {
  transform: translateY(-1px);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 10px;
}

.btn:active {
  transform: translateY(0);
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 10px;
}

.app {
  transition: all 0.5s ease;
}

.app.active {
  margin-left: 30%;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 50%;
  margin: 0 auto;
  padding: 3em;
}

.library {
  opacity: 0;
  width: 100%;
  max-width: 45em;
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  background: rgba(255, 255, 255, 0.5);
  box-shadow: 0 8px 0 0 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  border: 1px solid rgba(255, 255, 255, 0.18);
  overflow-y: scroll;
  transform: translateX(-100%);
  transition: all 0.5s ease;
}

.library.active {
  transform: translateX(0);
  opacity: 1;
}

.library__heading {
  font-size: 3rem;
  padding-top: 2.7rem;
  padding-left: 3rem;
}

.song {
  display: flex;
  align-items: center;
  padding: 0.5rem 0;
  padding-left: 3rem;
  gap: 2em;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.song.active {
  color: var(--clr-dark-100);
  background-color: var(--clr-neutral-200);
}

.song:hover {
  color: var(--clr-dark-100);
  background-color: var(--clr-neutral-100);
}

.song__img {
  width: 8em;
  border-radius: 50%;
  object-fit: cover;
}

.song__title {
  font-size: 2rem;
}

.song__artist {
  font-size: 1.6rem;
}

.player__song-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 60vh;
}

.player__img {
  margin: 0 auto;
  box-shadow: 0 8px 16px -6px rgba(16, 16, 16, 0.3);
  width: 20%;
  object-fit: cover;
  border-radius: 50%;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.player__img.playing {
  animation: rotate 45s infinite;
}

.player__song {
  font-size: 3rem;
  font-weight: var(--fw-700);
}

.player__artist {
  color: var(--clr-neutral-200);
  font-size: 2.4rem;
  font-weight: var(--fw-400);
}

.player__control-wrapper {
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  min-height: 20vh;
}

.progress__duration {
  margin-bottom: 1rem;
  display: flex;
  justify-content: space-between;
}

.progress__bar {
  background-color: rgba(255, 255, 255, 0.3);
  height: 0.5rem;
  border-radius: 1.5rem;
  cursor: pointer;
}

.progress__bar-item {
  background-color: var(--clr-neutral-100);
  width: 0%;
  height: 0.5rem;
  border-radius: 1.5rem;
}

.player__controls {
  display: flex;
  justify-content: space-between;
  width: 75%;
  margin-left: auto;
  margin-right: auto;
}

.controls__item {
  cursor: pointer;
  width: 4rem;
  height: 4rem;
}

.controls__volume {
  display: flex;
  align-items: center;
  flex-basis: 10%;
  transition: all 0.5s ease;
}

.controls__volume.active {
  flex-basis: 30%;
}

.controls__volume input[type='range'] {
  min-width: 0;
  width: 0;
  margin-left: 0.5em;
  flex-grow: 0;
  background-color: rgba(255, 255, 255, 0.3);
  background-image: linear-gradient(#fff, #fff);
  background-size: 70% 100%;
  background-repeat: no-repeat;
  border-radius: 1.5rem;
  -webkit-appearance: none;
  height: 0.5rem;
  cursor: pointer;
  opacity: 0.8;
  transition: flex-grow 0.3s ease, opacity 0.2s ease;
}

.controls__volume input[type='range']:hover {
  background-image: linear-gradient(
    var(--clr-neutral-300),
    var(--clr-neutral-300)
  );
}

.controls__volume.active input[type='range'] {
  opacity: 1;
  flex-grow: 1;
}

.controls__volume input[type='range']:focus {
  outline: none;
}

.controls__volume input[type='range']::-webkit-slider-thumb {
  background: var(--clr-neutral-300);
  -webkit-appearance: none;
  height: 1em;
  width: 1em;
  border-radius: 50%;
  opacity: 0;
  pointer-events: none;
}

.controls__volume.active input[type='range']:hover::-webkit-slider-thumb {
  opacity: 1;
  pointer-events: visible;
}

.controls__volume input[type='range']::-moz-range-thumb {
  background: var(--clr-neutral-300);
  height: 1em;
  width: 1em;
  border-radius: 50%;
  opacity: 0;
  pointer-events: none;
}

.controls__volume.active input[type='range']:hover::-moz-range-thumb {
  opacity: 1;
  pointer-events: visible;
}

.controls__volume input[type='range']::-ms-thumb {
  background: var(--clr-neutral-300);
  height: 1em;
  width: 1em;
  border-radius: 50%;
  opacity: 0;
  pointer-events: none;
  transition: all 0.1s ease-in;
}

.controls__volume.active input[type='range']:hover::-webkit-slider-thumb {
  opacity: 1;
  pointer-events: visible;
}

.controls__volume input[type='range']::-ms-track {
  width: 100%;
  cursor: pointer;

  /* Hides the slider so custom styles can be added */
  background: transparent;
  border-color: transparent;
  color: transparent;
}

.controls__item-play {
  display: block;
}

.controls__item-play.hide {
  display: none;
}

.controls__item-pause {
  display: none;
}

.controls__item-pause.show {
  display: block;
}

.controls__item-repeat {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  display: block;
  transition: background-color 0.3s ease, padding .1s ease-out, border-radius 1ms;
}

.controls__item-repeat.active {
  color: var(--clr-dark-300);
  background-color: var(--clr-neutral-100);
  padding: 0.5em;
}

.controls__icon {
  fill: var(--clr-neutral-100);
}

@media screen and (max-width: 76.8em) {
  html {
    font-size: 75%;
  }

  .nav,
  .player__control-wrapper,
  .player__song-wrapper {
    width: 85%;
    margin: 0 auto;
  }

  .nav__brand,
  .player__song-wrapper,
  .player__control-wrapper {
    opacity: 1;
    transition: all 0.5s ease;
  }

  .app.active .nav__brand,
  .app.active .player__song-wrapper,
  .app.active .player__control-wrapper {
    opacity: 0;
  }

  .player__img {
    width: 40%;
  }

  .library {
    max-width: 100%;
  }
}

@media screen and (max-width: 45em) {
  .controls__item {
    width: 2rem;
    height: 2rem;
  }

  .controls__item-repeat {
    width: 4rem;
    height: 4rem;
  }

  .nav__brand,
  .btn {
    font-size: 1.5rem;
  }

  .player__img {
    width: 60%;
  }
}

